src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail04.jova
class Main {

  public int main(int x) {
    return 0;
  }
}